--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <p>
         No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
       </p>
+      <!-- test -->
     </footer>
   </body>
 </html>
